Possivel estrurtura final do arquivo html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 		<link rel="stylesheet" href="style/style.css">
 	</head>
 	<body>
-	
+		<div id="container">
+			<div id="box-login">
+				<span>Email</span>
+				<input type="email">
+				<span>Passworld</span>
+				<input type="password">
+			</div>
+		</div>	
 	</body>
 </html>
