Atualizando a estrutura do arquivo html

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-widht,initial-scale=1.0">
-		<title>Tela de Login<title>
+		<title>Tela de Login</title>
 		<link rel="stylesheet" href="style/style.css">
 	</head>
 	<body>
 		<div id="container">
 			<div id="box-login">
-				<span>Email</span>
-				<input type="email">
-				<span>Passworld</span>
-				<input type="password">
+				<div id="box-input">	
+					<span>Email</span>
+					<input type="email">
+					<span>Passworld</span>
+					<input type="password">
+					<input type="button" value="Sign in" id="btm">
+				</div>
 			</div>
 		</div>	
 	</body>
