Criei um branch para testar uma nova configuração

--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-widht,initial-scale=1.0">
+		<meta name="viewport" content="width=device-widht,initial-scale=1">
 		<title>Tela de Login</title>
 		<link rel="stylesheet" href="style/style.css">
 	</head>
 	<body>
-		<div id="container">
+		<div id="container-box">
 			<div id="box-login">
-				<div id="box-input">	
-					<span>Email</span>
-					<input type="email">
-					<span>Passworld</span>
-					<input type="password">
-					<input type="button" value="Sign in" id="btm">
-				</div>
+				<span>Email</span>
+				<input type="email">
+				<span>Passworld</span>
+				<input type="passworld">
 			</div>
 		</div>	
 	</body>
