Recriado a tela de logim no branch de tests e pronto para o merge no branch main.OBS:A página possui também uma configuração responsiva

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<input type="email">
 				<span>Passworld</span>
 				<input type="passworld">
+				<input type="button" value="Sign Up" id="btm"> 
 			</div>
 		</div>	
 	</body>
