fiz novas alterações no arquivo html para contrapor com as novas configurações de estilos.foi adicionado: placeholder nos inputs de email e password e a adição das tag de imagens com os arquivos svg

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 		<div id="container-box">
 			<div id="box-login">
 				<span>Email</span>
-				<input type="email">
+				<img src='style/user.svg' id="user">
+				<input type="email" placeholder="example@example.com">
 				<span>Passworld</span>
-				<input type="passworld">
+				<input type="password" placeholder="********">
+				<img src='style/locked.svg' id="locker">
 				<input type="button" value="Sign Up" id="btm"> 
 			</div>
 		</div>	
